if (MINIROS_USE_SYSTEM_PROGRAM_OPTIONS)
    message(STATUS "Using boost::program_options")
else ()
    add_subdirectory(program_options)
    target_include_directories(program_options INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
    target_compile_definitions(program_options PUBLIC -DUSE_LOCAL_PROGRAM_OPTIONS)
    add_library(impl::program_options ALIAS program_options)
endif()
